# nixops-example

./: .gitignore  nixops-example-configuration.nix  nixops-example-lan.nix
nixops-example/: ChangeLog.md  LICENSE  README.md  client_session_key.aes  default.nix  nixops-example.cabal  nixops-example.nix  shell.nix
nixops-example/src/: Main.hs
